[gd_scene load_steps=7 format=3 uid="uid://3t1m2fj48puh"]

[ext_resource type="Script" uid="uid://bsjy4aiqcsgac" path="res://microjuegos/microjuego_2.gd" id="1_7xt7u"]
[ext_resource type="Texture2D" uid="uid://dbalkb2p84xpg" path="res://fondos/fondo 2.jpg" id="2_1j6v7"]
[ext_resource type="Texture2D" uid="uid://bfyov4l7rb265" path="res://sprites/micro 2/gato equilibrio.png" id="3_nv5do"]
[ext_resource type="Texture2D" uid="uid://06jg46vywuyi" path="res://sprites/micro 2/gato izq .png" id="4_1gl2c"]
[ext_resource type="Texture2D" uid="uid://d38renn5ssbdv" path="res://sprites/micro 2/gato der .png" id="5_x7xyx"]
[ext_resource type="Texture2D" uid="uid://oreimrcy4a2s" path="res://sprites/micro 2/gato cae .png" id="6_srngb"]

[node name="microjuego 2" type="Node2D"]
script = ExtResource("1_7xt7u")

[node name="Fondo" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 1918.0
offset_bottom = 1080.0
texture = ExtResource("2_1j6v7")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="BarraTiempo" type="ProgressBar" parent="."]
offset_left = 1370.0
offset_top = 1021.0
offset_right = 1770.0
offset_bottom = 1048.0
max_value = 1.5
value = 1.5
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="TimerJuego" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TimerCambio" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerRespuesta" type="Timer" parent="."]
one_shot = true

[node name="GatoEquilibrio" type="Sprite2D" parent="."]
position = Vector2(977, 693)
scale = Vector2(1.33191, 1.33191)
texture = ExtResource("3_nv5do")

[node name="gato_izq" type="Sprite2D" parent="."]
visible = false
position = Vector2(927, 720)
scale = Vector2(0.572266, 0.572266)
texture = ExtResource("4_1gl2c")

[node name="gato_der" type="Sprite2D" parent="."]
visible = false
position = Vector2(993, 738)
scale = Vector2(0.572266, 0.572266)
texture = ExtResource("5_x7xyx")

[node name="gato_se_cae" type="Sprite2D" parent="."]
visible = false
position = Vector2(857, 738)
scale = Vector2(0.482422, 0.482422)
texture = ExtResource("6_srngb")

[node name="TextoInstruccion" type="Label" parent="."]
offset_left = 502.0
offset_top = 434.0
offset_right = 1511.0
offset_bottom = 653.0
theme_override_colors/font_color = Color(0.984582, 0.99246, 0.999914, 1)
theme_override_font_sizes/font_size = 150
text = "ATENTO!"
horizontal_alignment = 1

[connection signal="timeout" from="TimerJuego" to="." method="_on_TimerJuego_timeout"]
[connection signal="timeout" from="TimerCambio" to="." method="_on_TimerCambio_timeout"]
[connection signal="timeout" from="TimerRespuesta" to="." method="_on_TimerRespuesta_timeout"]
